ICpdAS/dcon_dll/driver/bcb3/i87000.h

 
Exp87K WORD CALLBACK AnalogIn_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogInAll_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogOut_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogOutHex_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogOutFsr_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogOutReadBack_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogOutReadBackHex_87K(DWORD dwBuf[], float fBuf[],
      char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogOutReadBackFsr_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK ReadConfigurationStatus_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK ReadStartUpValue_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK SetStartUpValue_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogInFsr_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK AnalogInHex_87K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK ReadCounter(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK ReadUpDownDirPulse(long LBuf[], int IBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK ReadCounter_All(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK ReadFreq(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK ReadFreq_All(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK  ClearCounter(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK  SetCounterStatus(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp87K WORD CALLBACK  ReadCounterStatus(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);