ICpdAS/vc5/87k/ReadFreqDemo/I8000.h


Exp8K WORD CALLBACK AnalogIn_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK AnalogOutReadBack_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK AnalogInAll_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK AnalogInFsr_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK AnalogInHex_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK SetAlarmConnect_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK SetAlarmLimitValue_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK ReadAlarmLimitValue_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK ClearLatchAlarm_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK ReadAlarmMode_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK SetAlarmMode_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK ReadAlarmStatus_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK AnalogOut_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK ReadConfigurationStatus_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK SetStartUpValue_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK ReadStartUpValue_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK DigitalOut_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK DigitalBitOut_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK DigitalIn_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK DigitalOutReadBack_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
 Exp8K WORD CALLBACK DigitalInCounterRead_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK ClearDigitalInCounter_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK DigitalInLatch_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);
Exp8K WORD CALLBACK ClearDigitalInLatch_8K(DWORD dwBuf[], float fBuf[],
        char szSend[], char szReceive[]);