ICpdAS/dcon_dll/driver/vb5/i7000.bas


Declare Function CounterIn_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadCounterMaxValue_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetCounterMaxValue_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String, ByVal MaxValue As Double) As Integer
Declare Function ReadAlarmLimitValue_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetAlarmLimitValue_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String, ByVal AlarmValue As Double) As Integer
Declare Function ReadCounterStatus_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ClearCounter_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadOutputAlarmState_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function EnableCounterAlarm_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function DisableCounterAlarm_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function EnableCounterAlarm_7080D Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function DisableCounterAlarm_7080D Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetInputSignalMode_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadInputSignalMode_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadPresetCounterValue_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function PresetCounterValue_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String, ByVal PresetValue As Double) As Integer
Declare Function StartCounting_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadModuleMode_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetModuleMode_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadLevelVolt_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadMinSignalWidth_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetMinSignalWidth_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String, ByVal MinWidth As Long) As Integer
Declare Function SetGateMode_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadGateMode_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function DataToLED_7080 Lib "I7000.dll" (w7000 As Integer, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer


'----------------------for7082, 87082, 8080----------------------------------------------------------
Declare Function ReadCounter Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
                
Declare Function ReadUpDownDirPulse Lib "I7000.dll" (dwBuf As Long, IBuf As Integer, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

Declare Function ReadCounter_All Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadFreq Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadFreq_All Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

Declare Function ClearCounter Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String, ByVal MaxValue As Double) As Integer
Declare Function SetCounterStatus Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadCounterStatus Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String, ByVal AlarmValue As Double) As Integer

'--------------------- for 8K series -------------------------------------------
Declare Function AnalogIn_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogInFsr_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogInHex_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogInAll_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetAlarmConnect_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetAlarmLimitValue_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadAlarmLimitValue_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ClearLatchAlarm_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadAlarmMode_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetAlarmMode_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogOut_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogOutReadBack_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadAlarmStatus_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetConfigurationStatus_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadConfigurationStatus_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetStartUpValue_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadStartUpValue_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

Declare Function DigitalOut_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalOutReadBack_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalIn_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalBitOut_8K Lib "I7000.dll" (w7000 As Long, f7000 As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

Declare Function DigitalInCounterRead_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function ClearDigitalInCounter_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function DigitalInLatch_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer
Declare Function ClearDigitalInLatch_8K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo8000 As String, ByVal ReceiveFrom8000 As String) As Integer



'--------------------- for 87K series -------------------------------------------
Declare Function AnalogIn_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogInFsr_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogInHex_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogInAll_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
                
Declare Function AnalogOut_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogOutReadBack_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
                
Declare Function AnalogOutFsr_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogOutReadBackFsr_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
                
Declare Function AnalogOutHex_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function AnalogOutReadBackHex_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer

Declare Function SetConfigurationStatus_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadConfigurationStatus_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function SetStartUpValue_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
Declare Function ReadStartUpValue_87K Lib "I7000.dll" (dwBuf As Long, fBuf As Single, ByVal SendTo7000 As String, ByVal ReceiveFrom7000 As String) As Integer
